source/GrammarTree/SysY.output
Terminals unused in grammar

   SPDOT


语法

    0 $accept: Compiler $end

    1 Compiler: CompUnit

    2 CompUnit: CompUnit Decl
    3         | CompUnit FuncDef
    4         | Decl
    5         | FuncDef

    6 Decl: ConstDecl
    7     | VarDecl

    8 ConstDecl: KEYCONST TYPEINTEGER ConstDef ConstDefs SPSEMICOLON

    9 ConstDefs: %empty
   10          | ConstDefs SPCOMMA ConstDef

   11 ConstDef: IDENTIFIER ArrayDef OPASSIGN ConstInitVal

   12 ArrayDef: %empty
   13         | ArrayDef OPLEFTBRACKET ConstExp OPRIGHTBRACKET

   14 ConstInitVal: ConstExp
   15             | SPLEFTBRACE SPRIGHTBRACE
   16             | SPLEFTBRACE ConstInitVal ConstInitValList SPRIGHTBRACE

   17 ConstInitValList: %empty
   18                 | ConstInitValList SPCOMMA ConstInitVal

   19 VarDecl: TYPEINTEGER VarDef VarDefs SPSEMICOLON

   20 VarDef: IDENTIFIER ArrayDef
   21       | IDENTIFIER ArrayDef OPASSIGN InitVal

   22 VarDefs: %empty
   23        | VarDefs SPCOMMA VarDef

   24 InitVal: Exp
   25        | SPLEFTBRACE SPRIGHTBRACE
   26        | SPLEFTBRACE InitVal InitVals SPRIGHTBRACE

   27 InitVals: %empty
   28         | InitVals SPCOMMA InitVal

   29 FuncDef: TYPEVOID IDENTIFIER OPLEFTPRNT OPRIGHTPRNT Block
   30        | TYPEINTEGER IDENTIFIER OPLEFTPRNT OPRIGHTPRNT Block
   31        | TYPEVOID IDENTIFIER OPLEFTPRNT FuncFParams OPRIGHTPRNT Block
   32        | TYPEINTEGER IDENTIFIER OPLEFTPRNT FuncFParams OPRIGHTPRNT Block

   33 FuncFParam: TYPEINTEGER IDENTIFIER
   34           | TYPEINTEGER IDENTIFIER OPLEFTBRACKET OPRIGHTBRACKET ArrayExps

   35 FuncFParams: FuncFParam
   36            | FuncFParams SPCOMMA FuncFParam

   37 ArrayExps: %empty
   38          | ArrayExps OPLEFTBRACKET Exp OPRIGHTBRACKET

   39 Block: SPLEFTBRACE BlockItems SPRIGHTBRACE

   40 BlockItems: %empty
   41           | BlockItems BlockItem

   42 BlockItem: Decl
   43          | Stmt

   44 Stmt: LVal OPASSIGN Exp SPSEMICOLON
   45     | SPSEMICOLON
   46     | Exp SPSEMICOLON
   47     | Block
   48     | KEYIF OPLEFTPRNT Cond OPRIGHTPRNT Stmt
   49     | KEYIF OPLEFTPRNT Cond OPRIGHTPRNT Stmt KEYELSE Stmt
   50     | KEYWHILE OPLEFTPRNT Cond OPRIGHTPRNT Stmt
   51     | KEYBREAK SPSEMICOLON
   52     | KEYCONTINUE SPSEMICOLON
   53     | KEYRETURN SPSEMICOLON
   54     | KEYRETURN Exp SPSEMICOLON

   55 Exp: AddExp

   56 Cond: LOrExp

   57 LVal: IDENTIFIER ArrayExps

   58 PrimaryExp: OPLEFTPRNT Exp OPRIGHTPRNT
   59           | LVal
   60           | Number

   61 Number: IntConst

   62 IntConst: CONSTANTOCT
   63         | CONSTANTINTD
   64         | CONSTANTINTH

   65 UnaryExp: PrimaryExp
   66         | IDENTIFIER OPLEFTPRNT OPRIGHTPRNT
   67         | IDENTIFIER OPLEFTPRNT FuncRParams OPRIGHTPRNT
   68         | UnaryOp UnaryExp

   69 UnaryOp: OPPLUS
   70        | OPMINUS
   71        | OPNOT

   72 FuncRParams: Exp Exps

   73 Exps: %empty
   74     | Exps SPCOMMA Exp

   75 MulExp: UnaryExp
   76       | MulExp OPMULTIPLY UnaryExp
   77       | MulExp OPDIVIDE UnaryExp
   78       | MulExp OPMOD UnaryExp

   79 AddExp: MulExp
   80       | AddExp OPPLUS MulExp
   81       | AddExp OPMINUS MulExp

   82 RelExp: AddExp
   83       | RelExp OPLIGHT AddExp
   84       | RelExp OPGREAT AddExp
   85       | RelExp OPGREATEQ AddExp
   86       | RelExp OPLIGHTEQ AddExp

   87 EqExp: RelExp
   88      | EqExp OPEQUAL RelExp
   89      | EqExp OPNOTEQUAL RelExp

   90 LAndExp: EqExp
   91        | LAndExp OPAND EqExp

   92 LOrExp: LAndExp
   93       | LOrExp OPOR LAndExp

   94 ConstExp: AddExp


Terminals, with rules where they appear

$end (0) 0
error (256)
SPSEMICOLON (258) 8 19 44 45 46 51 52 53 54
SPCOMMA (259) 10 18 23 28 36 74
SPDOT (260)
SPLEFTBRACE (261) 15 16 25 26 39
SPRIGHTBRACE (262) 15 16 25 26 39
OPLEFTPRNT (263) 29 30 31 32 48 49 50 58 66 67
OPRIGHTPRNT (264) 29 30 31 32 48 49 50 58 66 67
OPLEFTBRACKET (265) 13 34 38
OPRIGHTBRACKET (266) 13 34 38
OPPLUS (267) 69 80
OPMINUS (268) 70 81
OPMULTIPLY (269) 76
OPDIVIDE (270) 77
OPMOD (271) 78
OPASSIGN (272) 11 21 44
OPAND (273) 91
OPOR (274) 93
OPNOT (275) 71
OPEQUAL (276) 88
OPNOTEQUAL (277) 89
OPGREAT (278) 84
OPLIGHT (279) 83
OPGREATEQ (280) 85
OPLIGHTEQ (281) 86
TYPEVOID (282) 29 31
TYPEINTEGER (283) 8 19 30 32 33 34
KEYCONST (284) 8
KEYIF (285) 48 49
KEYELSE (286) 49
KEYWHILE (287) 50
KEYBREAK (288) 51
KEYCONTINUE (289) 52
KEYRETURN (290) 53 54
CONSTANTINTD (291) 63
CONSTANTINTH (292) 64
CONSTANTOCT (293) 62
IDENTIFIER (294) 11 20 21 29 30 31 32 33 34 57 66 67


Nonterminals, with rules where they appear

$accept (40)
    左： 0
Compiler (41)
    左： 1, 右： 0
CompUnit (42)
    左： 2 3 4 5, 右： 1 2 3
Decl (43)
    左： 6 7, 右： 2 4 42
ConstDecl (44)
    左： 8, 右： 6
ConstDefs (45)
    左： 9 10, 右： 8 10
ConstDef (46)
    左： 11, 右： 8 10
ArrayDef (47)
    左： 12 13, 右： 11 13 20 21
ConstInitVal (48)
    左： 14 15 16, 右： 11 16 18
ConstInitValList (49)
    左： 17 18, 右： 16 18
VarDecl (50)
    左： 19, 右： 7
VarDef (51)
    左： 20 21, 右： 19 23
VarDefs (52)
    左： 22 23, 右： 19 23
InitVal (53)
    左： 24 25 26, 右： 21 26 28
InitVals (54)
    左： 27 28, 右： 26 28
FuncDef (55)
    左： 29 30 31 32, 右： 3 5
FuncFParam (56)
    左： 33 34, 右： 35 36
FuncFParams (57)
    左： 35 36, 右： 31 32 36
ArrayExps (58)
    左： 37 38, 右： 34 38 57
Block (59)
    左： 39, 右： 29 30 31 32 47
BlockItems (60)
    左： 40 41, 右： 39 41
BlockItem (61)
    左： 42 43, 右： 41
Stmt (62)
    左： 44 45 46 47 48 49 50 51 52 53 54, 右： 43 48 49 50
Exp (63)
    左： 55, 右： 24 38 44 46 54 58 72 74
Cond (64)
    左： 56, 右： 48 49 50
LVal (65)
    左： 57, 右： 44 59
PrimaryExp (66)
    左： 58 59 60, 右： 65
Number (67)
    左： 61, 右： 60
IntConst (68)
    左： 62 63 64, 右： 61
UnaryExp (69)
    左： 65 66 67 68, 右： 68 75 76 77 78
UnaryOp (70)
    左： 69 70 71, 右： 68
FuncRParams (71)
    左： 72, 右： 67
Exps (72)
    左： 73 74, 右： 72 74
MulExp (73)
    左： 75 76 77 78, 右： 76 77 78 79 80 81
AddExp (74)
    左： 79 80 81, 右： 55 80 81 82 83 84 85 86 94
RelExp (75)
    左： 82 83 84 85 86, 右： 83 84 85 86 87 88 89
EqExp (76)
    左： 87 88 89, 右： 88 89 90 91
LAndExp (77)
    左： 90 91, 右： 91 92 93
LOrExp (78)
    左： 92 93, 右： 56 93
ConstExp (79)
    左： 94, 右： 13 14


State 0

    0 $accept: . Compiler $end

    TYPEVOID     shift, and go to state 1
    TYPEINTEGER  shift, and go to state 2
    KEYCONST     shift, and go to state 3

    Compiler   转到状态 4
    CompUnit   转到状态 5
    Decl       转到状态 6
    ConstDecl  转到状态 7
    VarDecl    转到状态 8
    FuncDef    转到状态 9


State 1

   29 FuncDef: TYPEVOID . IDENTIFIER OPLEFTPRNT OPRIGHTPRNT Block
   31        | TYPEVOID . IDENTIFIER OPLEFTPRNT FuncFParams OPRIGHTPRNT Block

    IDENTIFIER  shift, and go to state 10


State 2

   19 VarDecl: TYPEINTEGER . VarDef VarDefs SPSEMICOLON
   30 FuncDef: TYPEINTEGER . IDENTIFIER OPLEFTPRNT OPRIGHTPRNT Block
   32        | TYPEINTEGER . IDENTIFIER OPLEFTPRNT FuncFParams OPRIGHTPRNT Block

    IDENTIFIER  shift, and go to state 11

    VarDef  转到状态 12


State 3

    8 ConstDecl: KEYCONST . TYPEINTEGER ConstDef ConstDefs SPSEMICOLON

    TYPEINTEGER  shift, and go to state 13


State 4

    0 $accept: Compiler . $end

    $end  shift, and go to state 14


State 5

    1 Compiler: CompUnit .
    2 CompUnit: CompUnit . Decl
    3         | CompUnit . FuncDef

    TYPEVOID     shift, and go to state 1
    TYPEINTEGER  shift, and go to state 2
    KEYCONST     shift, and go to state 3

    $default  reduce using rule 1 (Compiler)

    Decl       转到状态 15
    ConstDecl  转到状态 7
    VarDecl    转到状态 8
    FuncDef    转到状态 16


State 6

    4 CompUnit: Decl .

    $default  reduce using rule 4 (CompUnit)


State 7

    6 Decl: ConstDecl .

    $default  reduce using rule 6 (Decl)


State 8

    7 Decl: VarDecl .

    $default  reduce using rule 7 (Decl)


State 9

    5 CompUnit: FuncDef .

    $default  reduce using rule 5 (CompUnit)


State 10

   29 FuncDef: TYPEVOID IDENTIFIER . OPLEFTPRNT OPRIGHTPRNT Block
   31        | TYPEVOID IDENTIFIER . OPLEFTPRNT FuncFParams OPRIGHTPRNT Block

    OPLEFTPRNT  shift, and go to state 17


State 11

   20 VarDef: IDENTIFIER . ArrayDef
   21       | IDENTIFIER . ArrayDef OPASSIGN InitVal
   30 FuncDef: TYPEINTEGER IDENTIFIER . OPLEFTPRNT OPRIGHTPRNT Block
   32        | TYPEINTEGER IDENTIFIER . OPLEFTPRNT FuncFParams OPRIGHTPRNT Block

    OPLEFTPRNT  shift, and go to state 18

    $default  reduce using rule 12 (ArrayDef)

    ArrayDef  转到状态 19


State 12

   19 VarDecl: TYPEINTEGER VarDef . VarDefs SPSEMICOLON

    $default  reduce using rule 22 (VarDefs)

    VarDefs  转到状态 20


State 13

    8 ConstDecl: KEYCONST TYPEINTEGER . ConstDef ConstDefs SPSEMICOLON

    IDENTIFIER  shift, and go to state 21

    ConstDef  转到状态 22


State 14

    0 $accept: Compiler $end .

    $default  接受


State 15

    2 CompUnit: CompUnit Decl .

    $default  reduce using rule 2 (CompUnit)


State 16

    3 CompUnit: CompUnit FuncDef .

    $default  reduce using rule 3 (CompUnit)


State 17

   29 FuncDef: TYPEVOID IDENTIFIER OPLEFTPRNT . OPRIGHTPRNT Block
   31        | TYPEVOID IDENTIFIER OPLEFTPRNT . FuncFParams OPRIGHTPRNT Block

    OPRIGHTPRNT  shift, and go to state 23
    TYPEINTEGER  shift, and go to state 24

    FuncFParam   转到状态 25
    FuncFParams  转到状态 26


State 18

   30 FuncDef: TYPEINTEGER IDENTIFIER OPLEFTPRNT . OPRIGHTPRNT Block
   32        | TYPEINTEGER IDENTIFIER OPLEFTPRNT . FuncFParams OPRIGHTPRNT Block

    OPRIGHTPRNT  shift, and go to state 27
    TYPEINTEGER  shift, and go to state 24

    FuncFParam   转到状态 25
    FuncFParams  转到状态 28


State 19

   13 ArrayDef: ArrayDef . OPLEFTBRACKET ConstExp OPRIGHTBRACKET
   20 VarDef: IDENTIFIER ArrayDef .
   21       | IDENTIFIER ArrayDef . OPASSIGN InitVal

    OPLEFTBRACKET  shift, and go to state 29
    OPASSIGN       shift, and go to state 30

    $default  reduce using rule 20 (VarDef)


State 20

   19 VarDecl: TYPEINTEGER VarDef VarDefs . SPSEMICOLON
   23 VarDefs: VarDefs . SPCOMMA VarDef

    SPSEMICOLON  shift, and go to state 31
    SPCOMMA      shift, and go to state 32


State 21

   11 ConstDef: IDENTIFIER . ArrayDef OPASSIGN ConstInitVal

    $default  reduce using rule 12 (ArrayDef)

    ArrayDef  转到状态 33


State 22

    8 ConstDecl: KEYCONST TYPEINTEGER ConstDef . ConstDefs SPSEMICOLON

    $default  reduce using rule 9 (ConstDefs)

    ConstDefs  转到状态 34


State 23

   29 FuncDef: TYPEVOID IDENTIFIER OPLEFTPRNT OPRIGHTPRNT . Block

    SPLEFTBRACE  shift, and go to state 35

    Block  转到状态 36


State 24

   33 FuncFParam: TYPEINTEGER . IDENTIFIER
   34           | TYPEINTEGER . IDENTIFIER OPLEFTBRACKET OPRIGHTBRACKET ArrayExps

    IDENTIFIER  shift, and go to state 37


State 25

   35 FuncFParams: FuncFParam .

    $default  reduce using rule 35 (FuncFParams)


State 26

   31 FuncDef: TYPEVOID IDENTIFIER OPLEFTPRNT FuncFParams . OPRIGHTPRNT Block
   36 FuncFParams: FuncFParams . SPCOMMA FuncFParam

    SPCOMMA      shift, and go to state 38
    OPRIGHTPRNT  shift, and go to state 39


State 27

   30 FuncDef: TYPEINTEGER IDENTIFIER OPLEFTPRNT OPRIGHTPRNT . Block

    SPLEFTBRACE  shift, and go to state 35

    Block  转到状态 40


State 28

   32 FuncDef: TYPEINTEGER IDENTIFIER OPLEFTPRNT FuncFParams . OPRIGHTPRNT Block
   36 FuncFParams: FuncFParams . SPCOMMA FuncFParam

    SPCOMMA      shift, and go to state 38
    OPRIGHTPRNT  shift, and go to state 41


State 29

   13 ArrayDef: ArrayDef OPLEFTBRACKET . ConstExp OPRIGHTBRACKET

    OPLEFTPRNT    shift, and go to state 42
    OPPLUS        shift, and go to state 43
    OPMINUS       shift, and go to state 44
    OPNOT         shift, and go to state 45
    CONSTANTINTD  shift, and go to state 46
    CONSTANTINTH  shift, and go to state 47
    CONSTANTOCT   shift, and go to state 48
    IDENTIFIER    shift, and go to state 49

    LVal        转到状态 50
    PrimaryExp  转到状态 51
    Number      转到状态 52
    IntConst    转到状态 53
    UnaryExp    转到状态 54
    UnaryOp     转到状态 55
    MulExp      转到状态 56
    AddExp      转到状态 57
    ConstExp    转到状态 58


State 30

   21 VarDef: IDENTIFIER ArrayDef OPASSIGN . InitVal

    SPLEFTBRACE   shift, and go to state 59
    OPLEFTPRNT    shift, and go to state 42
    OPPLUS        shift, and go to state 43
    OPMINUS       shift, and go to state 44
    OPNOT         shift, and go to state 45
    CONSTANTINTD  shift, and go to state 46
    CONSTANTINTH  shift, and go to state 47
    CONSTANTOCT   shift, and go to state 48
    IDENTIFIER    shift, and go to state 49

    InitVal     转到状态 60
    Exp         转到状态 61
    LVal        转到状态 50
    PrimaryExp  转到状态 51
    Number      转到状态 52
    IntConst    转到状态 53
    UnaryExp    转到状态 54
    UnaryOp     转到状态 55
    MulExp      转到状态 56
    AddExp      转到状态 62


State 31

   19 VarDecl: TYPEINTEGER VarDef VarDefs SPSEMICOLON .

    $default  reduce using rule 19 (VarDecl)


State 32

   23 VarDefs: VarDefs SPCOMMA . VarDef

    IDENTIFIER  shift, and go to state 63

    VarDef  转到状态 64


State 33

   11 ConstDef: IDENTIFIER ArrayDef . OPASSIGN ConstInitVal
   13 ArrayDef: ArrayDef . OPLEFTBRACKET ConstExp OPRIGHTBRACKET

    OPLEFTBRACKET  shift, and go to state 29
    OPASSIGN       shift, and go to state 65


State 34

    8 ConstDecl: KEYCONST TYPEINTEGER ConstDef ConstDefs . SPSEMICOLON
   10 ConstDefs: ConstDefs . SPCOMMA ConstDef

    SPSEMICOLON  shift, and go to state 66
    SPCOMMA      shift, and go to state 67


State 35

   39 Block: SPLEFTBRACE . BlockItems SPRIGHTBRACE

    $default  reduce using rule 40 (BlockItems)

    BlockItems  转到状态 68


State 36

   29 FuncDef: TYPEVOID IDENTIFIER OPLEFTPRNT OPRIGHTPRNT Block .

    $default  reduce using rule 29 (FuncDef)


State 37

   33 FuncFParam: TYPEINTEGER IDENTIFIER .
   34           | TYPEINTEGER IDENTIFIER . OPLEFTBRACKET OPRIGHTBRACKET ArrayExps

    OPLEFTBRACKET  shift, and go to state 69

    $default  reduce using rule 33 (FuncFParam)


State 38

   36 FuncFParams: FuncFParams SPCOMMA . FuncFParam

    TYPEINTEGER  shift, and go to state 24

    FuncFParam  转到状态 70


State 39

   31 FuncDef: TYPEVOID IDENTIFIER OPLEFTPRNT FuncFParams OPRIGHTPRNT . Block

    SPLEFTBRACE  shift, and go to state 35

    Block  转到状态 71


State 40

   30 FuncDef: TYPEINTEGER IDENTIFIER OPLEFTPRNT OPRIGHTPRNT Block .

    $default  reduce using rule 30 (FuncDef)


State 41

   32 FuncDef: TYPEINTEGER IDENTIFIER OPLEFTPRNT FuncFParams OPRIGHTPRNT . Block

    SPLEFTBRACE  shift, and go to state 35

    Block  转到状态 72


State 42

   58 PrimaryExp: OPLEFTPRNT . Exp OPRIGHTPRNT

    OPLEFTPRNT    shift, and go to state 42
    OPPLUS        shift, and go to state 43
    OPMINUS       shift, and go to state 44
    OPNOT         shift, and go to state 45
    CONSTANTINTD  shift, and go to state 46
    CONSTANTINTH  shift, and go to state 47
    CONSTANTOCT   shift, and go to state 48
    IDENTIFIER    shift, and go to state 49

    Exp         转到状态 73
    LVal        转到状态 50
    PrimaryExp  转到状态 51
    Number      转到状态 52
    IntConst    转到状态 53
    UnaryExp    转到状态 54
    UnaryOp     转到状态 55
    MulExp      转到状态 56
    AddExp      转到状态 62


State 43

   69 UnaryOp: OPPLUS .

    $default  reduce using rule 69 (UnaryOp)


State 44

   70 UnaryOp: OPMINUS .

    $default  reduce using rule 70 (UnaryOp)


State 45

   71 UnaryOp: OPNOT .

    $default  reduce using rule 71 (UnaryOp)


State 46

   63 IntConst: CONSTANTINTD .

    $default  reduce using rule 63 (IntConst)


State 47

   64 IntConst: CONSTANTINTH .

    $default  reduce using rule 64 (IntConst)


State 48

   62 IntConst: CONSTANTOCT .

    $default  reduce using rule 62 (IntConst)


State 49

   57 LVal: IDENTIFIER . ArrayExps
   66 UnaryExp: IDENTIFIER . OPLEFTPRNT OPRIGHTPRNT
   67         | IDENTIFIER . OPLEFTPRNT FuncRParams OPRIGHTPRNT

    OPLEFTPRNT  shift, and go to state 74

    $default  reduce using rule 37 (ArrayExps)

    ArrayExps  转到状态 75


State 50

   59 PrimaryExp: LVal .

    $default  reduce using rule 59 (PrimaryExp)


State 51

   65 UnaryExp: PrimaryExp .

    $default  reduce using rule 65 (UnaryExp)


State 52

   60 PrimaryExp: Number .

    $default  reduce using rule 60 (PrimaryExp)


State 53

   61 Number: IntConst .

    $default  reduce using rule 61 (Number)


State 54

   75 MulExp: UnaryExp .

    $default  reduce using rule 75 (MulExp)


State 55

   68 UnaryExp: UnaryOp . UnaryExp

    OPLEFTPRNT    shift, and go to state 42
    OPPLUS        shift, and go to state 43
    OPMINUS       shift, and go to state 44
    OPNOT         shift, and go to state 45
    CONSTANTINTD  shift, and go to state 46
    CONSTANTINTH  shift, and go to state 47
    CONSTANTOCT   shift, and go to state 48
    IDENTIFIER    shift, and go to state 49

    LVal        转到状态 50
    PrimaryExp  转到状态 51
    Number      转到状态 52
    IntConst    转到状态 53
    UnaryExp    转到状态 76
    UnaryOp     转到状态 55


State 56

   76 MulExp: MulExp . OPMULTIPLY UnaryExp
   77       | MulExp . OPDIVIDE UnaryExp
   78       | MulExp . OPMOD UnaryExp
   79 AddExp: MulExp .

    OPMULTIPLY  shift, and go to state 77
    OPDIVIDE    shift, and go to state 78
    OPMOD       shift, and go to state 79

    $default  reduce using rule 79 (AddExp)


State 57

   80 AddExp: AddExp . OPPLUS MulExp
   81       | AddExp . OPMINUS MulExp
   94 ConstExp: AddExp .

    OPPLUS   shift, and go to state 80
    OPMINUS  shift, and go to state 81

    $default  reduce using rule 94 (ConstExp)


State 58

   13 ArrayDef: ArrayDef OPLEFTBRACKET ConstExp . OPRIGHTBRACKET

    OPRIGHTBRACKET  shift, and go to state 82


State 59

   25 InitVal: SPLEFTBRACE . SPRIGHTBRACE
   26        | SPLEFTBRACE . InitVal InitVals SPRIGHTBRACE

    SPLEFTBRACE   shift, and go to state 59
    SPRIGHTBRACE  shift, and go to state 83
    OPLEFTPRNT    shift, and go to state 42
    OPPLUS        shift, and go to state 43
    OPMINUS       shift, and go to state 44
    OPNOT         shift, and go to state 45
    CONSTANTINTD  shift, and go to state 46
    CONSTANTINTH  shift, and go to state 47
    CONSTANTOCT   shift, and go to state 48
    IDENTIFIER    shift, and go to state 49

    InitVal     转到状态 84
    Exp         转到状态 61
    LVal        转到状态 50
    PrimaryExp  转到状态 51
    Number      转到状态 52
    IntConst    转到状态 53
    UnaryExp    转到状态 54
    UnaryOp     转到状态 55
    MulExp      转到状态 56
    AddExp      转到状态 62


State 60

   21 VarDef: IDENTIFIER ArrayDef OPASSIGN InitVal .

    $default  reduce using rule 21 (VarDef)


State 61

   24 InitVal: Exp .

    $default  reduce using rule 24 (InitVal)


State 62

   55 Exp: AddExp .
   80 AddExp: AddExp . OPPLUS MulExp
   81       | AddExp . OPMINUS MulExp

    OPPLUS   shift, and go to state 80
    OPMINUS  shift, and go to state 81

    $default  reduce using rule 55 (Exp)


State 63

   20 VarDef: IDENTIFIER . ArrayDef
   21       | IDENTIFIER . ArrayDef OPASSIGN InitVal

    $default  reduce using rule 12 (ArrayDef)

    ArrayDef  转到状态 19


State 64

   23 VarDefs: VarDefs SPCOMMA VarDef .

    $default  reduce using rule 23 (VarDefs)


State 65

   11 ConstDef: IDENTIFIER ArrayDef OPASSIGN . ConstInitVal

    SPLEFTBRACE   shift, and go to state 85
    OPLEFTPRNT    shift, and go to state 42
    OPPLUS        shift, and go to state 43
    OPMINUS       shift, and go to state 44
    OPNOT         shift, and go to state 45
    CONSTANTINTD  shift, and go to state 46
    CONSTANTINTH  shift, and go to state 47
    CONSTANTOCT   shift, and go to state 48
    IDENTIFIER    shift, and go to state 49

    ConstInitVal  转到状态 86
    LVal          转到状态 50
    PrimaryExp    转到状态 51
    Number        转到状态 52
    IntConst      转到状态 53
    UnaryExp      转到状态 54
    UnaryOp       转到状态 55
    MulExp        转到状态 56
    AddExp        转到状态 57
    ConstExp      转到状态 87


State 66

    8 ConstDecl: KEYCONST TYPEINTEGER ConstDef ConstDefs SPSEMICOLON .

    $default  reduce using rule 8 (ConstDecl)


State 67

   10 ConstDefs: ConstDefs SPCOMMA . ConstDef

    IDENTIFIER  shift, and go to state 21

    ConstDef  转到状态 88


State 68

   39 Block: SPLEFTBRACE BlockItems . SPRIGHTBRACE
   41 BlockItems: BlockItems . BlockItem

    SPSEMICOLON   shift, and go to state 89
    SPLEFTBRACE   shift, and go to state 35
    SPRIGHTBRACE  shift, and go to state 90
    OPLEFTPRNT    shift, and go to state 42
    OPPLUS        shift, and go to state 43
    OPMINUS       shift, and go to state 44
    OPNOT         shift, and go to state 45
    TYPEINTEGER   shift, and go to state 91
    KEYCONST      shift, and go to state 3
    KEYIF         shift, and go to state 92
    KEYWHILE      shift, and go to state 93
    KEYBREAK      shift, and go to state 94
    KEYCONTINUE   shift, and go to state 95
    KEYRETURN     shift, and go to state 96
    CONSTANTINTD  shift, and go to state 46
    CONSTANTINTH  shift, and go to state 47
    CONSTANTOCT   shift, and go to state 48
    IDENTIFIER    shift, and go to state 49

    Decl        转到状态 97
    ConstDecl   转到状态 7
    VarDecl     转到状态 8
    Block       转到状态 98
    BlockItem   转到状态 99
    Stmt        转到状态 100
    Exp         转到状态 101
    LVal        转到状态 102
    PrimaryExp  转到状态 51
    Number      转到状态 52
    IntConst    转到状态 53
    UnaryExp    转到状态 54
    UnaryOp     转到状态 55
    MulExp      转到状态 56
    AddExp      转到状态 62


State 69

   34 FuncFParam: TYPEINTEGER IDENTIFIER OPLEFTBRACKET . OPRIGHTBRACKET ArrayExps

    OPRIGHTBRACKET  shift, and go to state 103


State 70

   36 FuncFParams: FuncFParams SPCOMMA FuncFParam .

    $default  reduce using rule 36 (FuncFParams)


State 71

   31 FuncDef: TYPEVOID IDENTIFIER OPLEFTPRNT FuncFParams OPRIGHTPRNT Block .

    $default  reduce using rule 31 (FuncDef)


State 72

   32 FuncDef: TYPEINTEGER IDENTIFIER OPLEFTPRNT FuncFParams OPRIGHTPRNT Block .

    $default  reduce using rule 32 (FuncDef)


State 73

   58 PrimaryExp: OPLEFTPRNT Exp . OPRIGHTPRNT

    OPRIGHTPRNT  shift, and go to state 104


State 74

   66 UnaryExp: IDENTIFIER OPLEFTPRNT . OPRIGHTPRNT
   67         | IDENTIFIER OPLEFTPRNT . FuncRParams OPRIGHTPRNT

    OPLEFTPRNT    shift, and go to state 42
    OPRIGHTPRNT   shift, and go to state 105
    OPPLUS        shift, and go to state 43
    OPMINUS       shift, and go to state 44
    OPNOT         shift, and go to state 45
    CONSTANTINTD  shift, and go to state 46
    CONSTANTINTH  shift, and go to state 47
    CONSTANTOCT   shift, and go to state 48
    IDENTIFIER    shift, and go to state 49

    Exp          转到状态 106
    LVal         转到状态 50
    PrimaryExp   转到状态 51
    Number       转到状态 52
    IntConst     转到状态 53
    UnaryExp     转到状态 54
    UnaryOp      转到状态 55
    FuncRParams  转到状态 107
    MulExp       转到状态 56
    AddExp       转到状态 62


State 75

   38 ArrayExps: ArrayExps . OPLEFTBRACKET Exp OPRIGHTBRACKET
   57 LVal: IDENTIFIER ArrayExps .

    OPLEFTBRACKET  shift, and go to state 108

    $default  reduce using rule 57 (LVal)


State 76

   68 UnaryExp: UnaryOp UnaryExp .

    $default  reduce using rule 68 (UnaryExp)


State 77

   76 MulExp: MulExp OPMULTIPLY . UnaryExp

    OPLEFTPRNT    shift, and go to state 42
    OPPLUS        shift, and go to state 43
    OPMINUS       shift, and go to state 44
    OPNOT         shift, and go to state 45
    CONSTANTINTD  shift, and go to state 46
    CONSTANTINTH  shift, and go to state 47
    CONSTANTOCT   shift, and go to state 48
    IDENTIFIER    shift, and go to state 49

    LVal        转到状态 50
    PrimaryExp  转到状态 51
    Number      转到状态 52
    IntConst    转到状态 53
    UnaryExp    转到状态 109
    UnaryOp     转到状态 55


State 78

   77 MulExp: MulExp OPDIVIDE . UnaryExp

    OPLEFTPRNT    shift, and go to state 42
    OPPLUS        shift, and go to state 43
    OPMINUS       shift, and go to state 44
    OPNOT         shift, and go to state 45
    CONSTANTINTD  shift, and go to state 46
    CONSTANTINTH  shift, and go to state 47
    CONSTANTOCT   shift, and go to state 48
    IDENTIFIER    shift, and go to state 49

    LVal        转到状态 50
    PrimaryExp  转到状态 51
    Number      转到状态 52
    IntConst    转到状态 53
    UnaryExp    转到状态 110
    UnaryOp     转到状态 55


State 79

   78 MulExp: MulExp OPMOD . UnaryExp

    OPLEFTPRNT    shift, and go to state 42
    OPPLUS        shift, and go to state 43
    OPMINUS       shift, and go to state 44
    OPNOT         shift, and go to state 45
    CONSTANTINTD  shift, and go to state 46
    CONSTANTINTH  shift, and go to state 47
    CONSTANTOCT   shift, and go to state 48
    IDENTIFIER    shift, and go to state 49

    LVal        转到状态 50
    PrimaryExp  转到状态 51
    Number      转到状态 52
    IntConst    转到状态 53
    UnaryExp    转到状态 111
    UnaryOp     转到状态 55


State 80

   80 AddExp: AddExp OPPLUS . MulExp

    OPLEFTPRNT    shift, and go to state 42
    OPPLUS        shift, and go to state 43
    OPMINUS       shift, and go to state 44
    OPNOT         shift, and go to state 45
    CONSTANTINTD  shift, and go to state 46
    CONSTANTINTH  shift, and go to state 47
    CONSTANTOCT   shift, and go to state 48
    IDENTIFIER    shift, and go to state 49

    LVal        转到状态 50
    PrimaryExp  转到状态 51
    Number      转到状态 52
    IntConst    转到状态 53
    UnaryExp    转到状态 54
    UnaryOp     转到状态 55
    MulExp      转到状态 112


State 81

   81 AddExp: AddExp OPMINUS . MulExp

    OPLEFTPRNT    shift, and go to state 42
    OPPLUS        shift, and go to state 43
    OPMINUS       shift, and go to state 44
    OPNOT         shift, and go to state 45
    CONSTANTINTD  shift, and go to state 46
    CONSTANTINTH  shift, and go to state 47
    CONSTANTOCT   shift, and go to state 48
    IDENTIFIER    shift, and go to state 49

    LVal        转到状态 50
    PrimaryExp  转到状态 51
    Number      转到状态 52
    IntConst    转到状态 53
    UnaryExp    转到状态 54
    UnaryOp     转到状态 55
    MulExp      转到状态 113


State 82

   13 ArrayDef: ArrayDef OPLEFTBRACKET ConstExp OPRIGHTBRACKET .

    $default  reduce using rule 13 (ArrayDef)


State 83

   25 InitVal: SPLEFTBRACE SPRIGHTBRACE .

    $default  reduce using rule 25 (InitVal)


State 84

   26 InitVal: SPLEFTBRACE InitVal . InitVals SPRIGHTBRACE

    $default  reduce using rule 27 (InitVals)

    InitVals  转到状态 114


State 85

   15 ConstInitVal: SPLEFTBRACE . SPRIGHTBRACE
   16             | SPLEFTBRACE . ConstInitVal ConstInitValList SPRIGHTBRACE
